@@ -49,6 +49,7 @@
  * #1423 (The computeSilvermanBandwidth of the HistogramFactory has no help)
  * #1432 (Expected improvement-based EfficientGlobalOptimization stopping criterion could be improved)
  * #1437 (OrderStatisticsMarginalChecker bound message)
+ * #1438 (Normal distribution: computeComplementaryCDF)
 
 == 1.14 release (2019-11-13) == #release-1.14
 
